src/scss/artist/artist-description.scss
@use "sass:color";
@use "../mixins";
@use "../variables";

.artist-description {
  @include mixins.flex(column, flex-start, center);

  width: 100%;

  .content {
    margin: 200px 0;
    align-items: flex-start;

    text-align: left;
  }

  h1 {
    @include mixins.reset;
  }

  .action-buttons {
    @include mixins.flex(row, flex-start, center);
    gap: 1.5rem;
    flex-wrap: wrap;

    margin-top: 32px;

    .btn {
      @include mixins.flex(row, flex-start, center);
      gap: 16px;

      width: 200px;
      padding: 20px 30px;

      font-family: inherit;
      font-size: 12.8px;
      text-transform: uppercase;

      border: none;
    }

    .mix-btn {
      background-color: variables.$purple;
    }

    .to-favorites-btn {
      background-color: variables.$red;
    }
  }
}

.bg-artist {
  background-image: url("../../assets/images/Morten\ Harket.png");
}

@media (width <= 414px) {
  .artist-description {
    .content {
      margin: 225px 0;
    }
  }
}

